@@ -1,13 +1,21 @@
 <DL>
 <!-- 
- ! - <DT>XXX-XX-XX
+ ! - <DT>XXXX-XX-XX
  ! - <DD>
  ! - <UL>
- ! -   <LI>
- ! - <P>
+ ! - <LI>
  ! - </LI>
  ! - </UL>
   -->
+<DT>XXXX-XX-XX
+<DD>
+<UL>
+<LI>Make <KBD>Show</KBD>, <KBD>Focus</KBD> and <KBD>Unfocus</KBD> work.
+</LI>
+<LI>Prevent starting prooftree in the middle of a proof.
+</LI>
+</UL>
+
 <DT>2011-04-20
 <DD>
 <UL>
